--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <h1>FETEC</h1>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at felis at ante tempor vulputate nec vel purus. Vivamus ac odio orci. Sed ante turpis, mollis vel laoreet ac, dignissim vitae nisl. Fusce sit amet bibendum felis. Morbi at neque eu mauris mollis mollis. Suspendisse metus quam, varius a facilisis id, consectetur quis ante. Sed gravida arcu vel magna viverra, ac blandit tortor rutrum. Nunc egestas magna eu condimentum vulputate. Sed non nibh posuere, vehicula felis vitae, scelerisque dolor. Nunc pharetra mauris semper tellus volutpat pellentesque. Cras lacinia laoreet nisi. Ut accumsan tellus at luctus laoreet. Sed nec elementum libero, nec vehicula nibh.</p>
+            <p>A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. As escolas visitantes participarão de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro Laboratório de Enfermagem, Laboratório de Informática e muito mais!</p>
 
             <div id="inline">
                 <a href="" class="button"><i class="fa-brands fa-instagram fa-flip"></i> Instagram</a>
@@ -64,7 +64,7 @@
 
             <h1>ETEC Darcy Pereira de Moraes</h1>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at felis at ante tempor vulputate nec vel purus. Vivamus ac odio orci. Sed ante turpis, mollis vel laoreet ac, dignissim vitae nisl. Fusce sit amet bibendum felis. Morbi at neque eu mauris mollis mollis. Suspendisse metus quam, varius a facilisis id, consectetur quis ante. Sed gravida arcu vel magna viverra, ac blandit tortor rutrum. Nunc egestas magna eu condimentum vulputate. Sed non nibh posuere, vehicula felis vitae, scelerisque dolor. Nunc pharetra mauris semper tellus volutpat pellentesque. Cras lacinia laoreet nisi. Ut accumsan tellus at luctus laoreet. Sed nec elementum libero, nec vehicula nibh.</p>
+            <p>A Etec Darcy Pereira de Moraes foi criada em 23 de Junho de 2012, com 3 cursos de eixos diferentes (Ambiente e Saúde, Gestão e Negócios e Segurança), finalizando o seu primeiro semestre com 233 alunos e, atualmente, conta com 13 cursos, dos mesmos eixos, incluindo o de Turismo, Hospitalidade e Lazer, totalizando 832 alunos (incluindo as classes descentralizadas na E.E. Professor Modesto Tavares de Lima), segundo dados do BDCETEC, no 1º semestre de 2021. A unidade cresceu durante esses quase 10 anos de existência, não só em número de alunos, mas também em número de docentes e de funcionários. Como toda unidade do Centro Paula Souza, seu principal objetivo é oferecer um ensino de qualidade voltado, principalmente, para a qualificação profissional através de um processo educativo que atenda às necessidades da formação profissional e, também, de um cidadão.</p>
 
             <div>
                 <a href="" class="button"><i class="fa-solid fa-globe fa-flip"></i> ETEC</a>
