--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <p>
                 Neste curso além da conclusão do ensino médio com alta qualidade você terá inúmeras oportunidades em sua carreira profissional.
-                A área computacional é um mercado extremamente promissor e de alta taxa de empregabilidade.
+                A área computacional é um mercado extremamente promissora e de alta taxa de empregabilidade.
                 Além do conhecimento em programação e desenvolvimento Web, aplicativos e robótica, o curso promove habilidades e competências que são essenciais para qualquer profissional na sociedade atual.
                 <br>
                 Se você gosta de tecnologia e gostaria de se aventurar nessa área incrível de desenvolvimento web vêm com a gente!
