--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
         <nav id="nav">
 
             <!--<img src="" alt="" id="logo">-->
-            <a href="index.html"><h1> INFOTEC <i class="fa-sharp fa-solid fa-laptop-code fa-flip"></i></h1></a>
+            <a href="index.html"><h1><div class="sumi">INFOTEC </div><i class="fa-sharp fa-solid fa-laptop-code fa-flip"></i></h1></a>
 
-            <ul>
+            <button id="btn-mobile">
+
+                <span id="hamburger"></span>
+                
+            </button>
+
+            <ul id="menu">
                 
                 <li><a href="#informatica">Curso</a></li>
                 <li><a href="#exposicoes">Exposições</a></li>
