--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. As escolas visitantes participarão de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro Laboratório de Enfermagem, Laboratório de Informática e muito mais!</p>
 
             <div id="inline">
-                <a href="" class="button"><i class="fa-brands fa-instagram fa-flip"></i> Instagram</a>
+                <a href="" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
                 <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NDNsNGJrNWxmODhqYXI1ZGlnYWxiZjFzbGEgcGZydXRvY2FzQG0&amp;tmsrc=pfrutocas%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
             </div>
 
@@ -77,9 +77,9 @@
             <p>A Etec Darcy Pereira de Moraes foi criada em 23 de Junho de 2012, com 3 cursos de eixos diferentes (Ambiente e Saúde, Gestão e Negócios e Segurança), finalizando o seu primeiro semestre com 233 alunos e, atualmente, conta com 13 cursos, dos mesmos eixos, incluindo o de Turismo, Hospitalidade e Lazer, totalizando 832 alunos (incluindo as classes descentralizadas na E.E. Professor Modesto Tavares de Lima), segundo dados do BDCETEC, no 1º semestre de 2021. A unidade cresceu durante esses quase 10 anos de existência, não só em número de alunos, mas também em número de docentes e de funcionários. Como toda unidade do Centro Paula Souza, seu principal objetivo é oferecer um ensino de qualidade voltado, principalmente, para a qualificação profissional através de um processo educativo que atenda às necessidades da formação profissional e, também, de um cidadão.</p>
 
             <div>
-                <a href="" class="button"><i class="fa-solid fa-globe fa-flip"></i> ETEC</a>
-                <a href="" class="button"><i class="fa-brands fa-instagram fa-flip"></i> Instagram</a>
-                <a href="" class="button"><i class="fa-brands fa-facebook fa-flip"></i> Facebook</a>
+                <a href="" class="button"><i class="fa-solid fa-globe fa-flip"></i><div class="sumi"> ETEC</div></a>
+                <a href="" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
+                <a href="" class="button"><i class="fa-brands fa-facebook fa-flip"></i><div class="sumi"> Facebook</div></a>
             </div>
 
         </div>
@@ -106,9 +106,9 @@
 
             <div>
 
-                <a href="" class="button"><i class="fa-solid fa-globe fa-flip"></i> ETEC</a>
-                <a href="" class="button"><i class="fa-brands fa-instagram fa-flip"></i> Instagram</a>
-                <a href="" class="button"><i class="fa-brands fa-facebook fa-flip"></i> Facebook</a>
+                <a href="" class="button"><i class="fa-solid fa-globe fa-flip"></i><div class="sumi"> ETEC</div></a>
+                <a href="" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
+                <a href="" class="button"><i class="fa-brands fa-facebook fa-flip"></i><div class="sumi"> Facebook</div></a>
 
             </div>
 
