--- a/exemplo_exposicao.html
+++ b/exemplo_exposicao.html
@@ -77,15 +77,17 @@
 
         <h1></h1>
 
-        <div class="ne">
+        <div id="div">
 
-            <img src="" alt="">
+            <div class="ne">
 
-            <p></p>
+                <img src="" alt="" width="300vw">
 
-            <a href="" class="button">Veja</i></a>
+                <p></p>
 
-        </div>
+                <a href="" class="button">Veja</a>
+
+            </div>
 
     </div>
 
