--- a/exemplo_exposicao.html
+++ b/exemplo_exposicao.html
@@ -67,13 +67,13 @@
 
         <p></p>
 
-        <a href="#expo" class="button">
+        <a href="#b" class="button">
             <p><i></i><!--Arrastar para baixo--></p>
         </a>
 
     </div>
 
-    <div class="exposicoes">
+    <div class="exposicoes" id="b">
 
         <h1></h1>
 
