--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul id="menu">
                 
                 <li><a href="#informatica">Curso</a></li>
-                <li><a href="#exposicoes">Exposições</a></li>
+                <li><a href="#a">Exposições</a></li>
                 <li><a href="#footer">Contato</a></li>
                 
             </ul>
@@ -116,7 +116,7 @@
 
     </div>
 
-    <div class="exposicoes">
+    <div class="exposicoes" id="a">
 
         <h1>Exposições</h1>
 
