--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <main id="fetec">
 
-        <img src="https://scontent.fsod7-1.fna.fbcdn.net/v/t39.30808-6/300385561_444094811070604_1428063376594542011_n.jpg?stp=dst-jpg_p180x540&_nc_cat=102&ccb=1-7&_nc_sid=e3f864&_nc_ohc=AHcz0-9CG9gAX-SMzbq&_nc_ht=scontent.fsod7-1.fna&oh=00_AT9R3cdmgFt4JJnSLcywsK0qIXgzWszlfVSoKZoCjXbttw&oe=634A0095" alt=""     id="bgfetec">
+        <img src="https://i.pinimg.com/originals/12/d4/00/12d400b928e32c0902d39d155d10e4c0.jpg" alt=""     id="bgfetec">
 
         <div id="fet">
 
