--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <main id="fetec">
 
-        <img src="https://i.pinimg.com/originals/12/d4/00/12d400b928e32c0902d39d155d10e4c0.jpg" alt=""     id="bgfetec">
+        <img src="https://c.wallhere.com/photos/7b/b8/1920x1080_px_Keyboards_laptop_technology-1355467.jpg!d" alt=""     id="bgfetec">
 
         <div id="fet">
 
