--- a/jogosdino.html
+++ b/jogosdino.html
@@ -86,7 +86,7 @@
 
                 <p>Ajude o Pedro a não se sujar!</p>
 
-                <a href="" class="button">Jogue</i></a>
+                <a href="fetecdarcy.github.io/d/peppapig" class="button">Jogue</i></a>
 
             </div>
 
@@ -96,7 +96,7 @@
 
                 <p>Se desafie com mario impossible!</p>
 
-                <a href="" class="button">Jogue</i></a>
+                <a href="fetecdarcy.github.io/d/mario" class="button">Jogue</i></a>
 
             </div>
             
@@ -106,7 +106,7 @@
 
                 <p>Salve gotham com o batman!</p>
 
-                <a href="" class="button">Jogue</i></a>
+                <a href="https://fetecdarcy.github.io/d/batman/" class="button">Jogue</i></a>
 
             </div>
 
