--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                 <p>Jogos inspirados na mecânica do jogo do dinossauro da Google.</p>
 
-                <a href="" class="button">Saiba-mais <i class="fa-solid fa-circle-info fa-beat-fade" style="--fa-beat-fade-opacity: 0.67; --fa-beat-fade-scale: 1.075;" ></i></a>
+                <a href="https://fetecdarcy.github.io/jogosdino" class="button">Saiba-mais <i class="fa-solid fa-circle-info fa-beat-fade" style="--fa-beat-fade-opacity: 0.67; --fa-beat-fade-scale: 1.075;" ></i></a>
 
             </div>
 
