--- a/jogosdino.html
+++ b/jogosdino.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="FETEC">
     <meta name="description" content="">
     <title>INFOTEC - Exposições de Informática</title>
-    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://fetecdarcy.github.io/img/laptop-code-solid.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -86,7 +86,7 @@
 
                 <p>Ajude o Pedro a não se sujar!</p>
 
-                <a href="fetecdarcy.github.io/d/peppapig" class="button">Jogue</i></a>
+                <a href="https://fetecdarcy.github.io/d/peppapig" class="button">Jogue</i></a>
 
             </div>
 
@@ -96,7 +96,7 @@
 
                 <p>Se desafie com mario impossible!</p>
 
-                <a href="fetecdarcy.github.io/d/mario" class="button">Jogue</i></a>
+                <a href="https://fetecdarcy.github.io/d/mario" class="button">Jogue</i></a>
 
             </div>
             
