--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 <p>Jogos da forca feitos em html e css.</p>
 
-                <a href="" class="button">Saiba-mais <i class="fa-solid fa-circle-info fa-beat-fade" style="--fa-beat-fade-opacity: 0.67; --fa-beat-fade-scale: 1.075;" ></i></a>
+                <a href="https://fetecdarcy.github.io/jogoforca" class="button">Saiba-mais <i class="fa-solid fa-circle-info fa-beat-fade" style="--fa-beat-fade-opacity: 0.67; --fa-beat-fade-scale: 1.075;" ></i></a>
 
             </div>
 
