--- a/jogosdino.html
+++ b/jogosdino.html
@@ -33,8 +33,8 @@
 
             <ul id="menu">
                 
-                <li><a href="#informatica">Curso</a></li>
-                <li><a href="#a">Exposições</a></li>
+                <li><a href="https://fetecdarcy.github.io/#informatica">Curso</a></li>
+                <li><a href="https://fetecdarcy.github.io/#a">Exposições</a></li>
                 <li><a href="#footer">Contato</a></li>
                 
             </ul>
