--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                 <img src="https://www.meet-and-code.org/img/inspirationlibrary/inspirationlibrary_application.jpg" alt="" width="300vw">
 
-                <p>Aplicativo Agenda Escolar feito com o APP Inventor pela equipe ALPHANOX.</p>
+                <p>Agendas Escolares desenvolvidas com o APP Inventor.</p>
 
                 <a href="" class="button">Saiba-mais <i class="fa-solid fa-circle-info fa-beat-fade" style="--fa-beat-fade-opacity: 0.67; --fa-beat-fade-scale: 1.075;" ></i></a>
 
