--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
     
     <div id="informatica">
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/QSDmMEG3yk8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QSDmMEG3yk8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="iframe"></iframe>
         <div id="texto">
 
             <h1>Informática para Internet</h1>
