--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
             <div id="inline">
                 <a href="https://www.instagram.com/fetec_dpm/" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
-                <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NDNsNGJrNWxmODhqYXI1ZGlnYWxiZjFzbGEgcGZydXRvY2FzQG0&amp;tmsrc=pfrutocas%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
-            </div>
+                <a target="_blank" class="dark" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NzlqbjljOTNwNmwzN2I0ZDZoY2RmcnNmZHRfMjAyMjEwMjRUMTYwMDAwWiBwZnJ1dG9jYXNAbQ&amp;tmsrc=pfrutocas%40gmail.com&amp;scp=ALL">Manhã - <img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_pt-BR.gif"></a>
+                <a target="_blank" class="dark" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MjU0YjVzaTQzam44cmRxbzgwNTEzYW9pZnBfMjAyMjEwMjRUMTEwMDAwWiBwZnJ1dG9jYXNAbQ&amp;tmsrc=pfrutocas%40gmail.com&amp;scp=ALL">Tarde - <img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_pt-BR.gif"></a>            </div>
 
         </div>
 
