--- a/jogosdino.html
+++ b/jogosdino.html
@@ -60,7 +60,7 @@
 
     <div class="apresentacao">
 
-        <h1>Jogos ispirados no jogo do Dino</h1>
+        <h1>Jogos inspirados no jogo do Dino</h1>
 
             <p>Jogos desenvolvidos a partir da mecânica do jogo do dinossauro da google, foram feitos por meio do Visual Studio Code com html,css e javascript. Foram construídos em meios diferentes e com criatividade, possui uma mecânica básica de jogo e o desevolvimento foi feito com apenas algumas animações de css e um pequeno codigo javascript.</p>
             
