--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav id="nav">
 
             <!--<img src="" alt="" id="logo">-->
-            <a href="index.html"><h1><div class="sumi">INFOTEC </div><i class="fa-sharp fa-solid fa-laptop-code fa-flip"></i></h1></a>
+            <a href="https://fetecdarcy.github.io"><h1><div class="sumi">INFOTEC </div><i class="fa-sharp fa-solid fa-laptop-code fa-flip"></i></h1></a>
 
             <button id="btn-mobile">
 
