--- a/jogoforca.html
+++ b/jogoforca.html
@@ -82,11 +82,11 @@
 
             <div class="expo">
 
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
+                <img src="https://media.cdnandroid.com/51/71/79/99/imagen-jogo-da-forca-brasileiro-0thumb.jpeg" alt="">
 
                 <p>Descubra a palavra com a forca!</p>
 
-                <a href="https://fetecdarcy.github.io/f" class="button">Jogue</i></a>
+                <a href="https://fetecdarcy.github.io/f/forca2" class="button">Jogue</i></a>
 
             </div>
 
@@ -96,17 +96,7 @@
 
                 <p>Descubra a palavra com a forca!</p>
 
-                <a href="https://fetecdarcy.github.io/f" class="button">Jogue</i></a>
-
-            </div>
-            
-            <div class="expo">
-
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
-
-                <p>Descubra a palavra com a forca!</p>
-
-                <a href="https://fetecdarcy.github.io/f" class="button">Jogue</i></a>
+                <a href="https://fetecdarcy.github.io/f/forca1" class="button">Jogue</i></a>
 
             </div>
 
