--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav id="nav">
 
             <!--<img src="" alt="" id="logo">-->
-            <a href="https://fetecdarcy.github.io"><h1><div class="sumi">INFOTEC </div><i class="fa-sharp fa-solid fa-laptop-code fa-flip"></i></h1></a>
+            <a href="index.html"><h1><div class="sumi">INFOTEC </div><i class="fa-sharp fa-solid fa-laptop-code fa-flip"></i></h1></a>
 
             <button id="btn-mobile">
 
@@ -36,6 +36,12 @@
                 <li><a href="#informatica">Curso</a></li>
                 <li><a href="#a">Exposições</a></li>
                 <li><a href="#footer">Contato</a></li>
+                <li>
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                </li>
                 
             </ul>
         
