--- a/appinventor.html
+++ b/appinventor.html
@@ -23,7 +23,7 @@
         <nav id="nav">
 
             <!--<img src="" alt="" id="logo">-->
-            <a href="index.html"><h1><div class="sumi">INFOTEC </div><i class="fa-sharp fa-solid fa-laptop-code fa-flip"></i></h1></a>
+            <a href="https://fetecdarcy.github.io/"><h1><div class="sumi">INFOTEC </div><i class="fa-sharp fa-solid fa-laptop-code fa-flip"></i></h1></a>
 
             <button id="btn-mobile">
 
@@ -33,8 +33,8 @@
 
             <ul id="menu">
                 
-                <li><a href="#informatica">Curso</a></li>
-                <li><a href="#a">Exposições</a></li>
+                <li><a href="https://fetecdarcy.github.io/#informatica">Curso</a></li>
+                <li><a href="https://fetecdarcy.github.io/#a">Exposições</a></li>
                 <li><a href="#footer">Contato</a></li>
                 <li>
                     <label class="switch">
