--- a/roboticadje.html
+++ b/roboticadje.html
@@ -95,7 +95,7 @@
 
             <h1>Babbage</h1>
 
-            <p>A equipe Babbage tendo como integrantes, Ana Laura Borges, Kauane Esthefany dos Santos, Júlia, desenvolveram dois projetos que possui uma boa adaptação e um preço barato com isso se classificaram em 6° no desafio.</p>
+            <p>A equipe Babbage tendo como integrantes, Ana Laura Borges, Kauane Esthefany dos Santos, Júlia Cardoso dos Reis, desenvolveram dois projetos que possui uma boa adaptação e um preço barato com isso se classificaram em 6° no desafio.</p>
 
         </div>
 
