--- a/jogopong.html
+++ b/jogopong.html
@@ -38,7 +38,7 @@
                 <li><a href="#footer">Contato</a></li>
                 <li>
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" class="switch-toggle">
                         <span class="slider round"></span>
                     </label>
                 </li>
@@ -88,19 +88,9 @@
 
             <div class="expo">
 
-                <img src="https://store-images.s-microsoft.com/image/apps.39582.13588747584706789.91374606-2ba3-4eb1-a992-5421b499af89.05c768c4-49ed-40c4-a818-717a71f62e62?mode=scale&q=90&h=200&w=200&background=%23000000" alt="">
+                <img src="https://tse1.mm.bing.net/th/id/OIP.r_oFaCAYq4Qv_8DMcxsqqgHaHt?pid=ImgDet&rs=1" alt="">
 
-                <p>Dispute com seu amigo no Pong!</p>
-
-                <a href="https://fetecdarcy.github.io/p" class="button">Jogue</i></a>
-
-            </div>
-
-            <div class="expo">
-
-                <img src="https://store-images.s-microsoft.com/image/apps.39582.13588747584706789.91374606-2ba3-4eb1-a992-5421b499af89.05c768c4-49ed-40c4-a818-717a71f62e62?mode=scale&q=90&h=200&w=200&background=%23000000" alt="">
-
-                <p>Dispute com seu amigo no Pong!</p>
+                <p>Python</p>
 
                 <a href="https://fetecdarcy.github.io/p" class="button">Jogue</i></a>
 
@@ -108,9 +98,9 @@
 
             <div class="expo">
 
-                <img src="https://store-images.s-microsoft.com/image/apps.39582.13588747584706789.91374606-2ba3-4eb1-a992-5421b499af89.05c768c4-49ed-40c4-a818-717a71f62e62?mode=scale&q=90&h=200&w=200&background=%23000000" alt="">
+                <img src="https://th.bing.com/th/id/R.0c488fb41ccc2d56979df7ea241e9296?rik=uMkrQUg6XbsmsA&pid=ImgRaw&r=0" alt="">
 
-                <p>Dispute com seu amigo no Pong!</p>
+                <p>JavaScript</p>
 
                 <a href="https://fetecdarcy.github.io/p" class="button">Jogue</i></a>
 
