--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="#footer">Contato</a></li>
                 <li>
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" class="switch-toggle">
                         <span class="slider round"></span>
                     </label>
                 </li>
@@ -60,9 +60,13 @@
             <p>A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. As escolas visitantes participarão de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro Laboratório de Enfermagem, Laboratório de Informática e muito mais!</p>
 
             <div id="inline">
-                <a href="https://www.instagram.com/fetec_dpm/" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
-                <a target="_blank" class="dark" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NzlqbjljOTNwNmwzN2I0ZDZoY2RmcnNmZHRfMjAyMjEwMjRUMTYwMDAwWiBwZnJ1dG9jYXNAbQ&amp;tmsrc=pfrutocas%40gmail.com&amp;scp=ALL">Manhã - <img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_pt-BR.gif"></a>
-                <a target="_blank" class="dark" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MjU0YjVzaTQzam44cmRxbzgwNTEzYW9pZnBfMjAyMjEwMjRUMTEwMDAwWiBwZnJ1dG9jYXNAbQ&amp;tmsrc=pfrutocas%40gmail.com&amp;scp=ALL">Tarde - <img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_pt-BR.gif"></a>            </div>
+                
+                <a target="_blank" href="https://www.instagram.com/fetec_dpm/" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
+
+                <a target="_blank" class="dark" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NzlqbjljOTNwNmwzN2I0ZDZoY2RmcnNmZHRfMjAyMjEwMjRUMTYwMDAwWiBwZnJ1dG9jYXNAbQ&amp;tmsrc=pfrutocas%40gmail.com&amp;scp=ALL"><div class="sumi">Manhã - </div><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_pt-BR.gif"></a>
+
+                <a target="_blank" class="dark" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MjU0YjVzaTQzam44cmRxbzgwNTEzYW9pZnBfMjAyMjEwMjRUMTEwMDAwWiBwZnJ1dG9jYXNAbQ&amp;tmsrc=pfrutocas%40gmail.com&amp;scp=ALL"><div class="sumi">Tarde - </div><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_pt-BR.gif"></a>            
+            </div>
 
         </div>
 
@@ -83,9 +87,9 @@
             <p>A Etec Darcy Pereira de Moraes foi criada em 23 de Junho de 2012, com 3 cursos de eixos diferentes (Ambiente e Saúde, Gestão e Negócios e Segurança), finalizando o seu primeiro semestre com 233 alunos e, atualmente, conta com 13 cursos, dos mesmos eixos, incluindo o de Turismo, Hospitalidade e Lazer, totalizando 832 alunos (incluindo as classes descentralizadas na E.E. Professor Modesto Tavares de Lima), segundo dados do BDCETEC, no 1º semestre de 2021. A unidade cresceu durante esses quase 10 anos de existência, não só em número de alunos, mas também em número de docentes e de funcionários. Como toda unidade do Centro Paula Souza, seu principal objetivo é oferecer um ensino de qualidade voltado, principalmente, para a qualificação profissional através de um processo educativo que atenda às necessidades da formação profissional e, também, de um cidadão.</p>
 
             <div>
-                <a href="https://etecdarcypereirademoraes.com.br" class="button"><i class="fa-solid fa-globe fa-flip"></i><div class="sumi"> ETEC</div></a>
-                <a href="https://www.instagram.com/etecdarcypereira/" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
-                <a href="https://www.facebook.com/profile.php?id=100005561298742" class="button"><i class="fa-brands fa-facebook fa-flip"></i><div class="sumi"> Facebook</div></a>
+                <a href="https://etecdarcypereirademoraes.com.br" class="button" target="_blank"><i class="fa-solid fa-globe fa-flip"></i><div class="sumi"> ETEC</div></a>
+                <a href="https://www.instagram.com/etecdarcypereira/" class="button" target="_blank"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
+                <a href="https://www.facebook.com/profile.php?id=100005561298742" class="button" target="_blank"><i class="fa-brands fa-facebook fa-flip"></i><div class="sumi"> Facebook</div></a>
             </div>
 
         </div>
@@ -111,8 +115,8 @@
 
             <div>
                 
-                <a href="https://github.com/fetecdarcy" class="button"><i class="fa-brands fa-github fa-flip"></i><div class="sumi"> Github</div></a>
-                <a href="" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
+                <a href="https://github.com/fetecdarcy" class="button" target="_blank"><i class="fa-brands fa-github fa-flip"></i><div class="sumi"> Github</div></a>
+                <a href="https://www.instagram.com/fetec_dpm/" class="button" target="_blank"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi">Instagram</div></a>
 
             </div>
 
@@ -128,7 +132,7 @@
 
             <div class="ne">
 
-                <a href="https://fetecdarcy.github.io/jogosdino"><img src="https://pt.mapcraft.me/images/4396/thumb300.jpg" alt="" width="300vw"></a>
+                <a href="jogosdino.html"><img src="https://pt.mapcraft.me/images/4396/thumb300.jpg" alt="" width="300vw"></a>
 
                 <p>Jogos inspirados na mecânica do jogo do dinossauro da Google.</p>
 
