--- a/jogosdino.html
+++ b/jogosdino.html
@@ -38,7 +38,7 @@
                 <li><a href="#footer">Contato</a></li>
                 <li>
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" class="switch-toggle">
                         <span class="slider round"></span>
                     </label>
                 </li>
