--- a/jogoscratch.html
+++ b/jogoscratch.html
@@ -96,7 +96,7 @@
                 <p>Esquerda - Verde
                 </p>
 
-            <a href="https://scratch.mit.edu/projects/745861471/fullscreen/" class="button" target="_blank"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue Aqui</a>
+            <a href="https://scratch.mit.edu/projects/745861471/" class="button" target="_blank"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue Aqui</a>
 
         </div>
 
@@ -113,73 +113,73 @@
 
             <div class="expo">
 
-                <img src="https://media.cdnandroid.com/51/71/79/99/imagen-jogo-da-forca-brasileiro-0thumb.jpeg" alt="">
+                <img src="img/1.png" alt="">
 
-                <a href="https://fetecdarcy.github.io/f/forca2" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
-
-            </div>
-
-            <div class="expo">
-
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
-
-                <a href="https://fetecdarcy.github.io/f/forca1" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
+                <a href="https://scratch.mit.edu/projects/724708439" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
 
             </div>
 
             <div class="expo">
 
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
+                <img src="img/2.png" alt="">
 
-                <a href="https://fetecdarcy.github.io/f/forca1" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
-
-            </div>
-
-            <div class="expo">
-
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
-
-                <a href="https://fetecdarcy.github.io/f/forca1" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
+                <a href="https://scratch.mit.edu/projects/724634494/" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
 
             </div>
 
             <div class="expo">
 
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
+                <img src="img/3.png" alt="">
 
-                <a href="https://fetecdarcy.github.io/f/forca1" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
-
-            </div>
-
-            <div class="expo">
-
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
-
-                <a href="https://fetecdarcy.github.io/f/forca1" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
+                <a href="https://scratch.mit.edu/projects/728847142" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
 
             </div>
 
             <div class="expo">
 
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
+                <img src="img/4.png" alt="">
 
-                <a href="https://fetecdarcy.github.io/f/forca1" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
-
-            </div>
-
-            <div class="expo">
-
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
-
-                <a href="https://fetecdarcy.github.io/f/forca1" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
+                <a href="https://scratch.mit.edu/projects/730419590/" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
 
             </div>
 
             <div class="expo">
 
-                <img src="https://brstatic.guiainfantil.com/pictures/materias/21125-forca-jogo-de-palavras-para-as-criancas.jpg" alt="">
+                <img src="img/5.png" alt="">
 
-                <a href="https://fetecdarcy.github.io/f/forca1" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
+                <a href="https://scratch.mit.edu/projects/731558506/" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
+
+            </div>
+
+            <div class="expo">
+
+                <img src="img/6.png" alt="">
+
+                <a href="https://scratch.mit.edu/projects/731715680/" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
+
+            </div>
+
+            <div class="expo">
+
+                <img src="img/7.png" alt="">
+
+                <a href="https://scratch.mit.edu/projects/722533080" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
+
+            </div>
+
+            <div class="expo">
+
+                <img src="img/8.png" alt="">
+
+                <a href="https://scratch.mit.edu/projects/730732204" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
+
+            </div>
+
+            <div class="expo">
+
+                <img src="img/9.png" alt="">
+
+                <a href="https://scratch.mit.edu/projects/726400945/" class="button"><i class="fa-solid fa-gamepad fa-bounce"></i> Jogue</i></a>
 
             </div>
         </div>
