--- a/jogopong.html
+++ b/jogopong.html
@@ -81,27 +81,24 @@
     </div>
 
     <div class="exposicoes" id="d">
-
+        <br>
         <h1>Jogos</h1>
 
         <p>
             <strong>Instruções</strong><br>
+            <br>
+            <strong>Python</strong><br>
             1 - Para jogar clique em Run <br>
             2 - Jogador A: utilize as teclas W e S para movimentar a barra e fazer a defesa <br>
             3 - Jogador B: utilize as setas para cima e para baixo para movimentar a barra e fazer a defesa <br>
+            <br>
+            <strong>JavaScript</strong><br>
+            1 - Para jogar precione 1 para <strong>Singleplayer</strong>, e 2 para <strong>Multiplayer</strong> <br>
+            2 - Jogador A: utilize as teclas <strong>Q</strong> e <strong>A</strong> para movimentar a barra e fazer a defesa <br>
+            3 - Jogador B: utilize as teclas <strong>P</strong> e <strong>L</strong> para movimentar a barra e fazer a defesa <br>
         </p>
 
         <div class="exposicoe">
-
-            <div class="expo">
-
-                <img src="https://tse1.mm.bing.net/th/id/OIP.r_oFaCAYq4Qv_8DMcxsqqgHaHt?pid=ImgDet&rs=1" alt="">
-
-                <p>Python</p>
-
-                <a href="https://replit.com/@kcgr1997/PongFetec" class="button">Jogue</i></a>
-
-            </div>
 
             <div class="expo">
 
@@ -109,7 +106,7 @@
 
                 <p>JavaScript</p>
 
-                <a href="https://fetecdarcy.github.io/p" class="button">Jogue</i></a>
+                <a href="https://fetecdarcy.github.io/p/pongjs" class="button">Jogue</i></a>
 
             </div>
 
