--- a/appinventor.html
+++ b/appinventor.html
@@ -85,7 +85,7 @@
             </div>
     </div>
 
-    <div class="apresentacao" id="app" id="app2">
+    <div class="apresentacao" id="app2">
 
         <div id="aa">
 
