--- a/appinventor.html
+++ b/appinventor.html
@@ -85,7 +85,7 @@
             </div>
     </div>
 
-    <div class="apresentacao" id="appblue">
+    <div class="apresentacao" id="appblue" id="app">
 
         <div id="aa">
 
