--- a/roboticadje.html
+++ b/roboticadje.html
@@ -65,23 +65,25 @@
 
     </div>
 
-    <div class="equipe" id="d">
-    
-        <div class="tx">
+    <section id="alphazinha">
+        <div class="equipe" id="d">
+        
+            <div class="tx">
 
-            <h1>Alphanox</h1>
+                <h1>Alphanox</h1>
 
-            <p>A equipe Alphanox tendo como integrantes, Pedro Frutuoso França, Gabriel Roberto Pereira, Luiz Eduardo dos Santos, Caio Henrique Vieira, desenvolveram um projeto que possui uma extética boa e um boa adaptação com isso se classificaram em 8° no desafio.</p>
+                <p>A equipe Alphanox tendo como integrantes, Pedro Frutuoso França, Gabriel Roberto Pereira, Luiz Eduardo dos Santos, Caio Henrique Vieira, desenvolveram um projeto que possui uma extética boa e um boa adaptação com isso se classificaram em 8° no desafio.</p>
+
+            </div>
+
+            <div class="vid">
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8RVRyEjYfhU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="iframe"></iframe>
+
+            </div>
 
         </div>
-
-        <div class="vid">
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8RVRyEjYfhU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="iframe"></iframe>
-
-        </div>
-
-    </div>
+    </section>
 
     <div class="equipe" id="j">
 
