--- a/appinventor.html
+++ b/appinventor.html
@@ -70,7 +70,7 @@
 
                 <h1><a href="#alphazinha" class="buttonfalse">Alphanox</a> - DJE</h1>
 
-                <p><strong>MyTime</strong>, um aplicativo desenvolvido pela equipe <strong>ALPHANOX</strong> para auxiliar pessoas a organizar sua vida de forma <strong>Prática e Fácil</strong>! Foi criado com o software <strong>AppInventor</strong> além de ser <strong>OpenSource</strong>.</p>
+                <p class="p2"><strong>MyTime</strong>, um aplicativo desenvolvido pela equipe <strong>ALPHANOX</strong> para auxiliar pessoas a organizar sua vida de forma <strong>Prática e Fácil</strong>! Foi criado com o software <strong>AppInventor</strong> além de ser <strong>OpenSource</strong>.</p>
                 
                 <p><strong>Integrantes: Caio Dassi - Gabriel Roberto - <br>Luiz Eduardo - Pedro Frutuoso</strong></p>
                 
