--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                 <a href="https://fetecdarcy.github.io/jogopong"><img src="https://cdn.discordapp.com/attachments/994774088474185729/1033547794725752924/Sem_Titulo-3.png" alt="" width="300vw"></a>
 
-                <p>Jogo 1 vs 1 feito em <strong>Python</strong> e <strong>JavaScript</strong>.</p>
+                <p>Jogo 1 vs 1 feito em <strong>JavaScript</strong>.</p>
 
                 <a href="https://fetecdarcy.github.io/jogopong" class="button">Saiba-mais <i class="fa-solid fa-circle-info fa-beat-fade" style="--fa-beat-fade-opacity: 0.67; --fa-beat-fade-scale: 1.075;" ></i></a>
 
