--- a/jogopong.html
+++ b/jogopong.html
@@ -68,7 +68,7 @@
 
         <h1>Jogos Pong!</h1>
 
-            <p>Jogos desenvolvidos a partir da mecânica do jogo Pong onde uma bola se move e deve ser rebatida como em uma partida de Ping-Pong, foram feitos por meio do Visual Studio Code com Python.</p>
+            <p>Jogos desenvolvidos a partir da mecânica do jogo Pong onde uma bola se move e deve ser rebatida como em uma partida de Ping-Pong, foram feitos por meio do Visual Studio Code com JavaScript.</p>
             
             <img src="https://s2.glbimg.com/hmam5dqwykVbv8_R0ly4dDtaZG8=/0x0:695x391/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2021/J/Q/QSQBQYTuWJL9U9qJKc9Q/2016-03-02-pong.jpg" alt="">
 
