--- a/appinventor.html
+++ b/appinventor.html
@@ -68,7 +68,7 @@
         <div class="apresentacao" id="app">
             <div id="aa">
 
-                <h1><a href="#alphazinha" class="buttonfalse">Alphanox</a> - DJE</h1>
+                <h1><a href="roboticadje.html" class="buttonfalse">Alphanox</a> - DJE</h1>
 
                 <p class="p2"><strong>MyTime</strong>, um aplicativo desenvolvido pela equipe <strong>ALPHANOX</strong> para auxiliar pessoas a organizar sua vida de forma <strong>Prática e Fácil</strong>! Foi criado com o software <strong>AppInventor</strong> além de ser <strong>OpenSource</strong>.</p>
                 
