--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div id="inline">
                 
-                <a target="_blank" href="https://www.instagram.com/fetec_dpm/" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
+                <a target="_blank" href="https://www.instagram.com/fetec_chp/" class="button"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi"> Instagram</div></a>
 
                 <a target="_blank" class="dark" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NzlqbjljOTNwNmwzN2I0ZDZoY2RmcnNmZHRfMjAyMjEwMjRUMTYwMDAwWiBwZnJ1dG9jYXNAbQ&amp;tmsrc=pfrutocas%40gmail.com&amp;scp=ALL"><div class="sumi">Manhã - </div><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_pt-BR.gif"></a>
 
@@ -116,7 +116,7 @@
             <div>
                 
                 <a href="https://github.com/fetecdarcy" class="button" target="_blank"><i class="fa-brands fa-github fa-flip"></i><div class="sumi"> Github</div></a>
-                <a href="https://www.instagram.com/fetec_dpm/" class="button" target="_blank"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi">Instagram</div></a>
+                <a href="https://www.instagram.com/fetec_chp/" class="button" target="_blank"><i class="fa-brands fa-instagram fa-flip"></i><div class="sumi">Instagram</div></a>
 
             </div>
 
@@ -154,7 +154,7 @@
 
                 <a href="https://fetecdarcy.github.io/jogopong"><img src="https://cdn.discordapp.com/attachments/994774088474185729/1033547794725752924/Sem_Titulo-3.png" alt="" width="300vw"></a>
 
-                <p>Jogo 1 vs 1 feito em <strong>JavaScript</strong>.</p>
+                <p>Jogo 1 vs 1 feito em <strong>Python</strong> e <strong>JavaScript</strong>.</p>
 
                 <a href="https://fetecdarcy.github.io/jogopong" class="button">Saiba-mais <i class="fa-solid fa-circle-info fa-beat-fade" style="--fa-beat-fade-opacity: 0.67; --fa-beat-fade-scale: 1.075;" ></i></a>
 
