--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 
             <h1>FETEC</h1>
 
-            <p>A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. As escolas visitantes participarão de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro Laboratório de Enfermagem, Laboratório de Informática e muito mais!</p>
+            <p>A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. Neste ano a FETEC ocorre nos dias 25 e 26 de Outubro.
+                As escolas visitantes participam de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro Laboratório de Enfermagem, Laboratório de Informática e muito mais!
+            Aqui divulgamos os Projetos e Jogos desenvolvidos pelo curso Informática para Internet, vem com  a gente! </p>
 
             <div id="inline">
                 
