--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="Etec Darcy Pereira de Moraes - Fetec - Feira de Ciências e Tecnologia e Inovação">
-        <meta name="description" content="A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. As escolas visitantes participarão de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro Laboratório de Enfermagem, Laboratório de Informática e muito mais!">
+        <meta name="description" content="A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. As escolas visitantes participam de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro Laboratório de Enfermagem, Laboratório de Informática e muito mais!">
         <title>INFOTEC - Exposições de Informática</title>
         <link rel="shortcut icon" href="https://fetecdarcy.github.io/img/laptop-code-solid.svg" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css">
@@ -58,7 +58,7 @@
             <h1>FETEC</h1>
 
             <p>A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. Neste ano a FETEC ocorre nos dias 25 e 26 de Outubro.
-                As escolas visitantes participam de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro Laboratório de Enfermagem, Laboratório de Informática e muito mais!
+                As escolas visitantes participam de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro, Laboratório de Enfermagem, Laboratório de Informática e muito mais!
             Aqui divulgamos os Projetos e Jogos desenvolvidos pelo curso Informática para Internet, vem com  a gente! </p>
 
             <div id="inline">
