--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
 
             <p>
                 Neste curso além da conclusão do ensino médio com alta qualidade você terá inúmeras oportunidades em sua carreira profissional.
-                A área computacional é um mercado extremamente promissora e de alta taxa de empregabilidade.
-                Além do conhecimento em programação e desenvolvimento Web, aplicativos e robótica, o curso promove habilidades e competências que são essenciais para qualquer profissional na sociedade atual.
+                A área computacional é um mercado extremamente promissor e de alta taxa de empregabilidade.
+                Além do conhecimento em programação e desenvolvimento Web, aplicativos e robótica, o curso promove habilidades e competências que são essenciais 
+                para qualquer profissional na sociedade atual.
                 <br>
-                Se você gosta de tecnologia e gostaria de se aventurar nessa área incrível de desenvolvimento web vêm com a gente!
+                Se você gosta de tecnologia e gostaria de se aventurar nessa área incrível de desenvolvimento web, vem com a gente!
             </p>
 
             <div>
@@ -186,7 +187,7 @@
 
                 <a href="https://fetecdarcy.github.io/roboticadje"><img src="https://fetecdarcy.github.io/img/CPS.jpg" alt="" width="300vw"></a>
 
-                <p>Projetos de Robótica finalistas no DJE proposto pelas equipes APLPHANOX E BABBAGE.</p>
+                <p>Projetos de Robótica finalistas no DJE proposto pelas equipes ALPHANOX E BABBAGE.</p>
 
                 <a href="https://fetecdarcy.github.io/roboticadje" class="button">Saiba-mais <i class="fa-solid fa-circle-info fa-beat-fade" style="--fa-beat-fade-opacity: 0.67; --fa-beat-fade-scale: 1.075;" ></i></a>
 
