--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
             <h1>FETEC</h1>
 
-            <p>A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. Neste ano a FETEC aconteceu nos dias 25 e 26 de Outubro.
+                     <p>A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. Em 2022 a FETEC aconteceu nos dias 25 e 26 de Outubro de modo presencial e contou com uma média de mil alunos visitantes de escolas da região de Itapetininga.
                 As escolas visitantes participaram de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro, Laboratório de Enfermagem, Laboratório de Informática e muito mais!
-            Aqui divulgamos os Projetos e Jogos desenvolvidos pelo curso Informática para Internet, vem com  a gente! </p>
+            Este site foi desenvolvidos pelos alunos do curso Informática para Internet para que o público tenha acesso ao material em modo de "exposição virtual" dos Projetos e Jogos desenvolvidos no decorrer do curso. Vem com a gente e divirta-se!</p>
 
             <div id="inline">
                 
