--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <h1>FETEC</h1>
 
                      <p>A FETEC é um evento promovido por Professores e Alunos para exposição de projetos, experimentos e apresentações. Em 2022 a FETEC aconteceu nos dias 25 e 26 de Outubro de modo presencial e contou com uma média de mil alunos visitantes de escolas da região de Itapetininga.
-                As escolas visitantes participaram de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro, Laboratório de Enfermagem, Laboratório de Informática e muito mais!
-            Este site foi desenvolvidos pelos alunos do curso Informática para Internet para que o público tenha acesso ao material em modo de "exposição virtual" dos Projetos e Jogos desenvolvidos no decorrer do curso. Vem com a gente e divirta-se!</p>
+                As escolas visitantes participaram de diversas ações promovidas no evento, dentre elas: Experimentos, Biblioteca ativa, Teatro, Laboratório de Enfermagem, Laboratório de Informática e muito mais! <br>
+            Este site foi desenvolvido pelos alunos do 1º ano do curso Ensino Médio integrado ao Técnico em *Informática para Internet* de modo a proporcionar ao público acesso aos materiais em modo de "exposição virtual" dos Projetos e Jogos desenvolvidos no decorrer do ano. Vem com a gente e divirta-se!</p>
 
             <div id="inline">
                 
